Add: Major Changes

--- a/posts/src/components/header/styles.scss
+++ b/posts/src/components/header/styles.scss
@@ -5,14 +5,20 @@
 // Navbar Section Style
 
 @import '../../styles/variables/colors.scss';
+@import '../../styles/variables/mixins.scss';
 
 .navbar {
   align-items: baseline;
   padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.navbar-nav {
+  padding-right: 22px;
 }
 
 .header-style {
-  padding-right: 70px;
+  padding-right: 0px;
   padding-left: -10px;
 }
 .top-bar {
@@ -24,26 +30,17 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 27px;
-    margin-right: 40px;
+    margin-left: 50px;
     padding-left: 0px;
     padding-bottom: 0px;
-  }
 
-  .active {
-    position: relative;
-
-    .nav-link {
-      padding-left: 0px;
-      font-weight: 400;
-      font-family: 'Nunito', sans-serif;
+    @include mobile {
+      margin-left: 20px;
     }
 
-    &::after {
-      content: '';
-      position: absolute;
-      background-color: $white;
-      height: 2px;
-      width: 23px;
+    &.active {
+      position: relative;
+      border-bottom: 3px solid $btn-color;
     }
   }
 
@@ -66,5 +63,152 @@
     color: $white;
     height: 55px;
     width: 231px;
+
+    @include mobile {
+      height: 36px;
+      width: 151px;
+    }
   }
+  .status-container {
+    position: relative;
+  }
+
+  .status {
+    position: absolute;
+    width: 86px;
+    height: 18px;
+    margin-bottom: 0px;
+    font-size: 11px;
+    line-height: 18px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 500;
+    color: white;
+    background: #01bcff;
+    display: flex;
+    align-items: center;
+    margin-left: 4px;
+    right: 0px;
+    justify-content: center;
+
+    @include mobile {
+      top: 33%;
+      left: 32%;
+    }
+  }
+
+  .nav-item {
+    @include mobile {
+      margin-bottom: 20px;
+    }
+  }
+
+  .navbar-nav {
+    @include mobile {
+      background: $white;
+      padding-right: 0;
+      border-radius: 12px;
+      box-shadow: 0px 16px 16px rgba(54, 54, 54, 0.08),
+        0px 32px 32px rgba(54, 54, 54, 0.08);
+    }
+  }
+
+  .navbar-toggler-icon {
+    font-size: 32px;
+    padding-top: 15px;
+    width: 27px;
+  }
+
+  .navbar-toggler {
+    padding: 0;
+  }
+
+  .navbar-toggler:hover,
+  .navbar-toggler:focus {
+    outline: none;
+  }
+
+  .contact-us-button {
+    border: none;
+    background: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .nav-icon1 {
+    width: 24px;
+    height: 24px;
+    margin-top: 18px;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.5s ease-in-out;
+    -moz-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+  }
+
+  .nav-icon1 span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: #687086;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.25s ease-in-out;
+    -moz-transition: 0.25s ease-in-out;
+    -o-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+  }
+
+  .nav-icon1 span:nth-child(1) {
+    top: 0px;
+  }
+
+  .nav-icon1 span:nth-child(2) {
+    top: 9px;
+  }
+
+  .nav-icon1 span:nth-child(3) {
+    top: 18px;
+  }
+
+  .nav-icon1.open span:nth-child(1) {
+    top: 18px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+
+  .nav-icon1.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+  }
+
+  .nav-icon1.open span:nth-child(3) {
+    top: 18px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+  }
+
+  .navbar-collapse {
+    z-index: 999;
+  }
+}
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
