--- a/posts/src/styles/App.scss
+++ b/posts/src/styles/App.scss
@@ -28,4 +28,11 @@ a {
   text-decoration: none !important;
 }
 
+.bmc-btn {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+}
+
 // main content section
