--- a/posts/src/components/Cards/styles.scss
+++ b/posts/src/components/Cards/styles.scss
@@ -5,11 +5,13 @@
 // Navbar Section Style
 
 @import '../../styles/variables/colors.scss';
+@import '../../styles/variables/mixins.scss';
 
 .job-cards-style {
   background-color: $white;
   border: 1px solid rgba(104, 112, 134, 0.1);
   box-sizing: border-box;
+  height: 344px;
   border-radius: 8px;
   padding: 11px 15px 21px 11px;
   display: flex;
@@ -37,13 +39,17 @@
     color: $theme-primary;
     margin-bottom: 8px;
     margin-top: 12px;
+
+    @include mobile {
+      font-size: 21px;
+    }
   }
 
   .company-name {
     font-family: Nunito;
     font-style: normal;
     font-weight: 600;
-    font-size: 13px;
+    font-size: 14px;
     line-height: 100%;
     color: $theme-secondary;
     margin-bottom: 0px;
@@ -65,7 +71,7 @@
       font-family: Nunito;
       font-style: normal;
       font-weight: 400;
-      font-size: 12px;
+      font-size: 14px;
       line-height: 100%;
       color: $theme-secondary;
       margin-bottom: 0;
@@ -88,15 +94,18 @@
     font-size: 12px;
     line-height: 100%;
     margin-top: 18px;
-    transition: background-color 0.1s;
+    transition: background-color 0.2s;
+    transition: background-position 0.2s;
+    transition: padding-right 0.2s;
     transition-timing-function: ease-in-out;
 
     &:hover {
       background-image: url('../../assets/images/NewTab.svg');
       background-repeat: no-repeat;
-      background-position: 10% center;
+      background-position: 90% center;
+      background-size: 12px;
       background-color: $btn-color;
-      padding-left: 20px;
+      padding-right: 20px;
       color: $white;
     }
   }
