--- a/posts/src/components/JobGuideCard/styles.scss
+++ b/posts/src/components/JobGuideCard/styles.scss
@@ -5,10 +5,12 @@
 // Navbar Section Style
 
 @import '../../styles/variables/colors.scss';
+@import '../../styles/variables/mixins.scss';
 
 .job-guide-cards-style {
   background-color: $white;
   border-radius: 8px;
+  height: 400px;
   padding: 11px 15px 21px 11px;
   display: flex;
   flex-direction: column;
@@ -23,23 +25,45 @@
     .company-img {
       width: 100%;
       height: 100%;
-
       margin-bottom: 12px;
     }
   }
 
   .heading {
     max-width: 322px;
-    font-family: 'Gilroy';
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
     font-size: 24px;
-    font-weight: 700;
-    line-height: 29px;
-    color: rgba(28, 28, 28, 1);
-    margin-bottom: 12px;
+    line-height: 120%;
+    color: $theme-primary;
+    margin-bottom: 0px;
+    margin-top: 12px;
+
+    @include mobile {
+      font-size: 22px;
+      line-height: 33px;
+    }
+  }
+
+  .heading {
+    max-width: 322px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 120%;
+    color: $theme-primary;
+    margin-bottom: 8px;
+    margin-top: 12px;
+
+    @include mobile {
+      font-size: 21px;
+    }
   }
 
   .icons-text {
-    margin-bottom: 12px;
+    margin-top: 14px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -51,31 +75,13 @@
     }
 
     .requirement {
-      font-family: 'Gilroy';
-      font-size: 12px;
-      font-weight: 500;
-      line-height: 12px;
-      color: rgba(0, 0, 0, 0.5);
-    }
-  }
-
-  .apply-btn {
-    color: #213e9c;
-    border: 1px solid rgba(28, 28, 28, 0.1);
-    border-radius: 4px;
-    width: 96px;
-    height: 32px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Gilroy';
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 12px;
-
-    &:hover {
-      background-color: #213e9c;
-      color: $white;
+      font-family: Nunito;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 100%;
+      color: $theme-secondary;
+      margin-bottom: 0;
     }
   }
 
