--- a/posts/src/components/Tabs/styles.scss
+++ b/posts/src/components/Tabs/styles.scss
@@ -21,12 +21,11 @@
   }
 
   .tab-button {
-    width: 245px;
     text-align: center;
     color: $theme-secondary;
     height: 32px;
     border-radius: 36px;
-    padding: 0 18px;
+    padding: 0 12px;
     border: none;
     align-items: center;
     display: flex;
@@ -42,6 +41,10 @@
     @include desktop {
       width: 50%;
       padding: 20px 0;
+    }
+
+    @include mobile {
+      font-size: 14px;
     }
 
     &.tab-button-active {
