--- a/posts/src/containers/JobGuide/styles.scss
+++ b/posts/src/containers/JobGuide/styles.scss
@@ -7,11 +7,16 @@
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
-.home-page-style {
+.job-guide-page-style {
   .all-page-style {
     background-image: url('../../assets/images/Bg-Top.svg');
     background-repeat: no-repeat;
     background-size: contain;
+
+    @include desktop-extra-lg {
+      background-size: cover;
+      max-height: 600px;
+    }
 
     @include mobile {
       background-image: none;
@@ -28,15 +33,38 @@
     }
 
     .text-box {
-      padding: 110px 0px 18px 0px;
+      padding: 35px 0px 18px 0px;
 
       @include mobile {
-        padding: 78px 0px 18px 0px;
+        padding: 18px 0px 18px 0px;
       }
     }
 
-    .top-heading {
+    .top-section {
       position: relative;
+      padding-top: 100px;
+
+      @include mobile {
+        padding-top: 64px;
+      }
+
+      .back-btn {
+        font-weight: 600;
+        font-family: 'Nunito', sans-serif;
+        font-size: 18px;
+        line-height: 100%;
+        color: $btn-color;
+        align-items: center;
+        display: flex;
+        position: relative;
+        z-index: 1;
+      }
+
+      .back-btn-icon {
+        height: 14px;
+        width: 17px;
+        margin-right: 5px;
+      }
     }
 
     .heading {
@@ -45,33 +73,28 @@
       font-weight: 800;
       font-size: 46px;
       line-height: 130%;
-      margin-bottom: 24px;
+      margin-bottom: 12px;
       width: 65%;
 
       @include mobile {
-        font-size: 26px;
+        font-size: 24px;
         width: 100%;
       }
     }
 
-    .status-card {
-      color: white;
-      background: #01bcff;
-      width: 108px;
-      height: 27px;
-      margin-bottom: 0px;
-      font-size: 16px;
-      line-height: 18px;
-      font-family: 'Nunito', sans-serif;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .purpose-heading {
+      font-family: Poppins;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 24px;
+      line-height: 120%;
+      color: $theme-primary;
+      margin-bottom: 8px;
+      margin-top: 12px;
 
       @include mobile {
-        font-size: 12px;
-        width: 78px;
-        height: 20px;
+        font-size: 21px;
+        line-height: 150%;
       }
     }
 
@@ -88,109 +111,42 @@
       }
     }
 
-    .register-box {
-      display: flex;
-      width: 53%;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-
-      @include mobile {
-        flex-direction: column;
-        width: 100%;
-        align-items: flex-start;
-      }
-    }
-
-    .register-input {
-      width: 460px;
-      height: 60px;
-      border-radius: 36px;
-      border: none;
-      width: 100%;
-      font-size: 16px;
-      line-height: 20px;
-      padding: 20px;
-      font-family: 'Nunito', sans-serif;
-      color: $theme-primary;
-      box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
-
-      &::placeholder {
-        color: $theme-secondary;
-      }
-
-      @include mobile {
-        width: 100%;
-        margin-bottom: 18px;
-        font-size: 14px;
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .register-btn {
-      width: 178px;
-      height: 48px;
-      position: absolute;
-      right: 18px;
-      background: $btn-color;
-      color: white;
-      border: none;
-      border-radius: 37px;
-      margin-left: 15px;
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 800;
-      margin-bottom: 0px;
-      font-family: 'Nunito', sans-serif;
-
-      @include mobile {
-        position: relative;
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .btn-span-text {
-      font-size: 10px;
-      line-height: 15px;
+    .purpose-para {
+      margin-top: 16px;
       font-weight: 400;
-    }
-  }
-
-  .update-info-container {
-    background: rgba(39, 174, 96, 0.1);
-    height: 48px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .update-info {
-      text-align: center;
-      font-weight: 600;
       font-size: 18px;
-      margin-bottom: 0;
-      color: #27ae60;
-    }
-  }
+      line-height: 27px;
+      font-family: 'Nunito', sans-serif;
+      word-wrap: break-word;
+      white-space: pre-wrap;
+      color: $theme-secondary;
+      overflow: hidden;
 
-  .job-post-section {
-    background-image: url('../../assets/images/BackgroundMid.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: left bottom;
-
-    @include desktop-extra-lg {
-      background-size: contain;
+      @include mobile {
+        font-size: 14px;
+        line-height: 150%;
+      }
     }
 
-    @include mobile {
-      background-image: none;
+    .purpose-box-container {
+      margin-top: 65px;
+
+      @include mobile {
+        margin-top: 24px;
+      }
+    }
+
+    .methods {
+      border-radius: 8px;
+      border: 1px solid rgba(104, 112, 134, 0.1);
+      padding: 24px 36px 35px 36px;
+      width: 100%;
+      margin-top: 45px;
+
+      @include mobile {
+        padding: 12px 10px 36px 18px;
+        margin-top: 24px;
+      }
     }
   }
 
@@ -223,7 +179,7 @@
     margin-bottom: 0px;
 
     @include mobile {
-      font-size: 24px;
+      font-size: 22px;
       line-height: 33px;
     }
   }
@@ -259,7 +215,7 @@
   }
 
   .job-guide-section {
-    background-image: url('../../assets/images/BackgroundFooter.svg');
+    background-image: url('../../assets/images/Bg-Bottom.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left bottom;
@@ -280,7 +236,7 @@
     margin: auto;
 
     @include mobile {
-      padding: 36px 12px;
+      padding: 0px 12px;
     }
 
     .top-space {
@@ -313,7 +269,6 @@
     background: #f7f9fb;
     border-radius: 4px;
     display: flex;
-    font-family: 'Nunito', sans-serif;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -321,12 +276,8 @@
     font-size: 18px;
     line-height: 100%;
     color: #2d66fe;
-    border: none;
+    border: 2px solid $btn-color;
     margin-top: 48px;
-
-    &:focus {
-      outline: none;
-    }
   }
 
   .load-more-btn-container {
@@ -335,49 +286,20 @@
     justify-content: center;
   }
 
-  .null-type-container {
+  .null-text {
+    width: 100%;
     display: flex;
     align-items: center;
-    flex-direction: column;
+    font-size: 40px;
+    font-weight: 500;
     justify-content: center;
+    height: 300px;
   }
 
-  .null-text {
-    font-family: Nunito;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 21px;
-    text-align: center;
-    margin-top: 6px;
-    color: $theme-secondary;
-
-    @include mobile {
-      font-size: 14px;
-    }
-  }
-
-  .null-image {
-    height: 250px;
-    width: 275px;
-    margin-top: 72px;
-
-    @include mobile {
-      margin-top: 36px;
-    }
-  }
-
-  .null-heading {
-    font-family: Poppins;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 120%;
+  .do-para {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    overflow: hidden;
     margin-top: 24px;
-    color: $theme-primary;
-    margin-bottom: 0;
-    text-align: center;
-
-    @include mobile {
-      font-size: 21px;
-    }
   }
 }
