--- a/posts/src/components/Cards/styles.scss
+++ b/posts/src/components/Cards/styles.scss
@@ -11,7 +11,7 @@
   background-color: $white;
   border: 1px solid rgba(104, 112, 134, 0.1);
   box-sizing: border-box;
-  height: 344px;
+  height: 354px;
   border-radius: 8px;
   padding: 11px 15px 21px 11px;
   display: flex;
@@ -29,8 +29,19 @@
     }
   }
 
+  .card-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .position-remote {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .heading {
-    max-width: 322px;
     font-family: Poppins;
     font-style: normal;
     font-weight: bold;
@@ -79,9 +90,9 @@
   }
 
   .apply-btn {
-    background-color: #f7f9fb;
+    background-color: $white;
     color: $btn-color;
-    border: none;
+    border: 1px solid rgba(104, 112, 134, 0.2);
     border-radius: 4px;
     width: 96px;
     height: 32px;
@@ -110,9 +121,17 @@
     }
   }
 
-  .card-content {
+  .remote {
+    background-color: #01bcff;
+    color: $white;
+    font-size: 14px;
+    width: 57px;
+    height: 23px;
+    font-weight: 400;
+    margin-bottom: 0;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5px;
   }
 }
