--- a/posts/src/components/JobGuideCard/styles.scss
+++ b/posts/src/components/JobGuideCard/styles.scss
@@ -10,22 +10,27 @@
 .job-guide-cards-style {
   background-color: $white;
   border-radius: 8px;
-  height: 400px;
+  height: 410px;
   padding: 11px 15px 21px 11px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   border: 1px solid rgba($black, 0.1);
+  position: relative;
+
+  @include mobile {
+    margin: 0 12px;
+  }
 
   .image-container {
     height: 197px;
-    width: 100%;
-    padding: -11px -15px 0px -11px;
+    margin: -11px -15px 0px -11px;
 
     .company-img {
       width: 100%;
       height: 100%;
       margin-bottom: 12px;
+      border-radius: 8px 8px 0px 0;
     }
   }
 
