--- a/posts/src/containers/CitiesJobs/styles.scss
+++ b/posts/src/containers/CitiesJobs/styles.scss
@@ -7,13 +7,18 @@
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
-.home-page-style {
-  height: 100vh;
+.city-jobs-page-style {
+  overflow-anchor: none;
 
   .all-page-style {
     background-image: url('../../assets/images/Bg-Top.svg');
     background-repeat: no-repeat;
     background-size: contain;
+
+    @include desktop-extra-lg {
+      background-size: cover;
+      max-height: 600px;
+    }
 
     @include mobile {
       background-image: none;
@@ -23,22 +28,45 @@
     max-width: 1128px;
     display: block;
     margin: auto;
-    padding: 2px 0px 88px 0px;
+    padding: 2px 0px 0px 0px;
 
     @include mobile {
       padding: 0px 12px 64px 12px;
     }
 
     .text-box {
-      padding: 110px 0px 18px 0px;
+      padding: 35px 0px 18px 0px;
 
       @include mobile {
-        padding: 78px 0px 18px 0px;
+        padding: 18px 0px 18px 0px;
       }
     }
 
-    .top-heading {
+    .top-section {
       position: relative;
+      padding-top: 100px;
+
+      @include mobile {
+        padding-top: 64px;
+      }
+
+      .back-btn {
+        font-weight: 600;
+        font-family: 'Nunito', sans-serif;
+        font-size: 18px;
+        line-height: 100%;
+        color: $btn-color;
+        align-items: center;
+        display: flex;
+        position: relative;
+        z-index: 1;
+      }
+
+      .back-btn-icon {
+        height: 14px;
+        width: 17px;
+        margin-right: 5px;
+      }
     }
 
     .heading {
@@ -47,163 +75,25 @@
       font-weight: 800;
       font-size: 46px;
       line-height: 130%;
-      margin-bottom: 24px;
+      margin-bottom: 12px;
       width: 65%;
 
       @include mobile {
-        font-size: 26px;
+        font-size: 24px;
         width: 100%;
       }
-    }
-
-    .status-card {
-      color: white;
-      background: #01bcff;
-      width: 108px;
-      height: 27px;
-      margin-bottom: 0px;
-      font-size: 16px;
-      line-height: 18px;
-      font-family: 'Nunito', sans-serif;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      @include mobile {
-        font-size: 12px;
-        width: 78px;
-        height: 20px;
-      }
-    }
-
-    .para {
-      font-family: 'Nunito', sans-serif;
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 150%;
-      margin-bottom: 0;
-      color: $theme-secondary;
-
-      @include mobile {
-        font-size: 14px;
-      }
-    }
-
-    .register-box {
-      display: flex;
-      width: 53%;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-
-      @include mobile {
-        flex-direction: column;
-        width: 100%;
-        align-items: flex-start;
-      }
-    }
-
-    .register-input {
-      width: 460px;
-      height: 60px;
-      border-radius: 36px;
-      border: none;
-      width: 100%;
-      font-size: 16px;
-      line-height: 20px;
-      padding: 20px;
-      font-family: 'Nunito', sans-serif;
-      color: $theme-primary;
-      box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
-
-      &::placeholder {
-        color: $theme-secondary;
-      }
-
-      @include mobile {
-        width: 100%;
-        margin-bottom: 18px;
-        font-size: 14px;
-        background-color: #f7f9fb;
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .register-btn {
-      width: 178px;
-      height: 48px;
-      position: absolute;
-      right: 18px;
-      background: $btn-color;
-      color: white;
-      border: none;
-      border-radius: 37px;
-      margin-left: 15px;
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 800;
-      margin-bottom: 0px;
-      font-family: 'Nunito', sans-serif;
-
-      @include mobile {
-        position: relative;
-      }
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .btn-span-text {
-      font-size: 10px;
-      line-height: 15px;
-      font-weight: 400;
-    }
-  }
-
-  .update-info-container {
-    background: rgba(39, 174, 96, 0.1);
-    height: 48px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .update-info {
-      text-align: center;
-      font-weight: 600;
-      font-size: 18px;
-      margin-bottom: 0;
-      color: #27ae60;
-    }
-  }
-
-  .job-post-section {
-    background-image: url('../../assets/images/BackgroundMid.svg');
-    background-repeat: no-repeat;
-    background-position: left bottom;
-    padding: 100px 0px 120px 0px;
-    min-height: 850px;
-    overflow-anchor: none;
-
-    @include desktop-extra-lg {
-      background-size: contain;
-    }
-
-    @include mobile {
-      background-image: none;
-      padding: 48px 12px 60px 12px;
     }
   }
 
   .cards-container {
+    padding: 100px 0px 120px 0px;
     max-width: 1128px;
     display: block;
     margin: auto;
+
+    @include mobile {
+      padding: 48px 12px 60px 12px;
+    }
 
     .highlighted-text {
       color: #1e2432;
@@ -224,7 +114,7 @@
     margin-bottom: 0px;
 
     @include mobile {
-      font-size: 24px;
+      font-size: 22px;
       line-height: 33px;
     }
   }
@@ -260,7 +150,7 @@
   }
 
   .job-guide-section {
-    background-image: url('../../assets/images/BackgroundFooter.svg');
+    background-image: url('../../assets/images/Bg-Bottom.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left bottom;
@@ -281,7 +171,7 @@
     margin: auto;
 
     @include mobile {
-      padding: 36px 12px;
+      padding: 0px 12px;
     }
 
     .top-space {
@@ -314,7 +204,6 @@
     background: #f7f9fb;
     border-radius: 4px;
     display: flex;
-    font-family: 'Nunito', sans-serif;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -324,7 +213,6 @@
     color: #2d66fe;
     border: none;
     margin-top: 48px;
-    overscroll-behavior: auto;
 
     &:focus {
       outline: none;
@@ -383,31 +271,11 @@
     }
   }
 
-  /*Cities Specific Job */
-  .job-specific-cities-section {
-    padding: 123px 0px 20px 0px;
+  .job-cards-style {
+    height: 320px;
+  }
 
-    .cards-container {
-      max-width: 1128px;
-      display: block;
-      margin: auto;
-
-      .text-box {
-        margin-bottom: 12px;
-
-        @include mobile {
-          margin-bottom: 0px;
-        }
-      }
-
-      @include mobile {
-        padding-left: 12px;
-        padding-right: 12px;
-      }
-    }
-
-    .cities-cards {
-      margin-top: 20px;
-    }
+  .city-text {
+    text-transform: capitalize;
   }
 }
